# docproof

./: .gitignore  BUILD.md  LICENSE  PLAN.md  README.md  REFERENCES.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docproof/: __init__.py  __main__.py  app.py  cli.py  config.py  downloader.py  logging_setup.py  report.py  settings_store.py  version.py
docproof/document/: __init__.py  docx_handler.py  position_mapper.py  run_ops.py  text_handler.py
docproof/engine/: __init__.py  base_engine.py  engine_manager.py  kenlm_engine.py  macbert_engine.py  parallel.py  rule_engine.py  user_dict.py
docproof/resources/: icon.icns
docproof/ui/: __init__.py  correction_view.py  error_list.py  main_window.py  theme.py  welcome_wizard.py
docproof/ui/dialogs/: __init__.py  settings.py
models/: fix_dict.txt
scripts/: build_portable.bat
tests/: __init__.py  conftest.py  test_batch4.py  test_config.py  test_docx_handler.py  test_engine_extras.py  test_engine_switch.py  test_fix_dict.py  test_gui.py  test_load_safety.py  test_macbert_local.py  test_position_mapper.py  test_rule_engine.py  test_run_ops.py  test_settings_store.py  test_streaming.py  test_text_handler.py  test_user_dict.py  test_version.py
