[project]
name = "docproof"
version = "0.3.1"
description = "中文文档离线校对工具 - Chinese document offline proofreading tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "python-docx>=1.0.0",
    "kenlm>=0.3.0",
    "pycorrector>=1.1.0",
]

[project.optional-dependencies]
macbert = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
docproof = "docproof.app:main"

[tool.pyinstaller]
# PyInstaller 打包配置
name = "DocProof"
onefile = false
windowed = true
icon = "docproof/resources/icon.ico"
add_data = [
    "third_party/pycorrector/pycorrector:pycorrector",
    "models/:models/",
]
hidden_imports = [
    "pycorrector",
    "pycorrector.corrector",
    "pycorrector.detector",
    "pycorrector.proper_corrector",
    "pycorrector.utils",
    "pycorrector.utils.text_utils",
    "pycorrector.utils.tokenizer",
    "pycorrector.utils.get_file",
    "pycorrector.utils.io_utils",
    "pycorrector.utils.math_utils",
    "pycorrector.utils.evaluate_utils",
    "pycorrector.utils.error_utils",
    "kenlm",
    "pypinyin",
    "jieba",
    "loguru",
]
exclude_modules = [
    "torch",
    "transformers",
    "paddle",
    "paddlenlp",
    "tensorflow",
]
