[project]
name = "docproof"
version = "0.4.13"
description = "中文文档离线校对工具 - Chinese document offline proofreading tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "python-docx>=1.0.0",
    "kenlm>=0.3.0",
    # Required by vendored pycorrector in third_party/
    "jieba>=0.42.0",
    "pypinyin>=0.44.0",
    "loguru>=0.6.0",
    "tqdm>=4.62.0",
    "six>=1.16.0",
]

[project.optional-dependencies]
macbert = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
build = [
    "pyinstaller>=6.0.0",
]
# pycorrector from PyPI provides extra data files (same_pinyin.txt etc.).
# The vendored copy in third_party/ already includes these, but installing
# the pip package ensures all transitive deps are available for development.
dev = [
    "pycorrector>=1.1.0",
]

[project.scripts]
docproof = "docproof.app:main"

[tool.pyinstaller]
# PyInstaller 打包配置
name = "DocProof"
onefile = false
windowed = true
icon = "docproof/resources/icon.ico"
add_data = [
    "third_party/pycorrector/pycorrector:pycorrector",
    "models/:models/",
]
hidden_imports = [
    "pycorrector",
    "pycorrector.corrector",
    "pycorrector.detector",
    "pycorrector.proper_corrector",
    "pycorrector.utils",
    "pycorrector.utils.text_utils",
    "pycorrector.utils.tokenizer",
    "pycorrector.utils.get_file",
    "pycorrector.utils.io_utils",
    "pycorrector.utils.math_utils",
    "pycorrector.utils.evaluate_utils",
    "pycorrector.utils.error_utils",
    "kenlm",
    "pypinyin",
    "jieba",
    "loguru",
    "tqdm",
    "six",
]
exclude_modules = [
    "torch",
    "transformers",
    "paddle",
    "paddlenlp",
    "tensorflow",
]
